src/objects/page_access__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Expire_date__c</fullName>
        <description>Store Expire date of License</description>
        <label>Expire date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Key__c</fullName>
        <label>License Key</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>For License Type</description>
        <label>License Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_no__c</fullName>
        <description>This store Remaining No of License</description>
        <label>License no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <description>Module Name</description>
        <label>Module Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <label>Org_ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perpetual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To assign life time validity of the license.</description>
        <inlineHelpText>Check if you want to give lifetime validity to the user.</inlineHelpText>
        <label>Perpetual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected User is ReadOnly or not</description>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tabs__c</fullName>
        <description>Store list of Tabs</description>
        <label>Tabs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User_ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>page_access</label>
</CustomObject>